--- a/app/globals.css
+++ b/app/globals.css
@@ -4,15 +4,15 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 214, 255, 220;
+  --background-end-rgb: 255, 244, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 0, 1, 40;
+    --background-end-rgb: 255, 255, 255;
   }
 }
 
@@ -24,4 +24,29 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.spacer {
+
+    aspect-ratio: 900/271;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+}
+
+.about-skills {
+  background-image: url('../public/about-skills.svg');
+}
+
+.skills-links {
+  background-image: url('../public/skills-links.svg');
+}
+
+.comp-wrapper {
+  position: absolute;
+  z-index: 0;
 }
