--- a/app/portfolio/PortBody.css
+++ b/app/portfolio/PortBody.css
@@ -16,7 +16,7 @@
 
 .project-section-spacer {
     min-height: 5rem;
-    background-color: aqua;
+    /* background-color: aqua; */
     min-width: 5rem;
     /* border-top: 8% inherit solid; */
 }
@@ -27,7 +27,13 @@
     align-items: center;
     margin-right: 5%;
     margin-left: 5%;
-    
+    box-shadow: black 3pt 3pt;
+    position: relative;
+}
+.project:hover {
+    outline-color: #c34e2e;
+    box-shadow: black 10pt 10pt;
+    transition: 0.5s;
 }
 
 .reverse {
@@ -35,11 +41,32 @@
 }
 
 .project-text {
+    /* font-size: large; */
+    max-width: 35rem;
+    padding: 5px;
+}
+
+.project-text-body {
     font-size: large;
-    max-width: 30rem;
+    text-align: center;
+}
+
+.project-text-title {
+    font-size: 35px;
+    text-align: center;
+    text-decoration: underline;
 }
 
 .project-spacer {
-    min-width: 5rem;
-    background-color: aqua;
+    min-width: 3rem;
+    
+    /* background-color: aqua; */
+}
+
+.image {
+    position: inherit;
+}
+.image:hover {
+    /* background: linear-gradient( to bottom, rgba(244, 98, 255, 1) 80%, rgba(244, 98, 58, 1) 80%);
+    transition: 1s; */
 }
