--- a/components/Header.css
+++ b/components/Header.css
@@ -2,7 +2,10 @@
     display: flex;
     font-size: 26px;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
+    margin-top: 1.5vh;
+    margin-right: 3vw;
+    min-width: 15rem;
     /* background-color: lawngreen; */
 }
 
@@ -11,6 +14,8 @@
     font-size: 26px;
     flex-direction: row;
     justify-content: flex-start;
+    margin-top: 1.5vh;
+    margin-left: 3vh;
     /* background-color: beige; */
 
 }
@@ -26,11 +31,17 @@
     top: 0;
     left: 0;
     z-index: 1;
+    height: 4rem;
+    overflow-y: hidden;
 }
 
 .NavItem:hover {
     color: #f4623a;
     cursor: pointer;
+}
+
+.NavSpacer {
+    min-width: 4vw;
 }
 
 
